--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   background-color: black;
-  height: 230px;
+  height: 240px;
 }
 
 .container {
@@ -25,4 +25,22 @@
 .copyright {
   color: white;
   text-align: center;
+  padding-bottom: 10px;
+}
+
+@media only screen and (max-width: 670px) {
+  .Footer {
+    height: 270px;
+  }
+  .social {
+    padding: 0;
+    padding-top: 2em;
+    padding-bottom: 0.5em;
+  }
+  .address {
+    padding: 1em 0;
+  }
+  .address p {
+    margin: 0.5em 0;
+  }
 }
