--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   background-color: black;
-  height: 240px;
+  height: 230px;
 }
 
 .container {
@@ -13,6 +13,7 @@
 .social {
   color: silver;
   padding: 2em;
+  text-align: center;
 }
 
 .address {
@@ -24,23 +25,29 @@
 }
 .copyright {
   color: white;
+  font-size: 1em;
   text-align: center;
-  padding-bottom: 10px;
+  padding-bottom: 1em;
 }
 
-@media only screen and (max-width: 670px) {
+@media only screen and (max-width: 600px) {
   .Footer {
-    height: 270px;
+    height: 275px;
   }
   .social {
     padding: 0;
-    padding-top: 2em;
-    padding-bottom: 0.5em;
+    padding-bottom: 1.2em;
+    border-bottom: 1px solid white;
   }
   .address {
-    padding: 1em 0;
+    padding: 0;
+    padding-top: 1.5em;
+    text-align: center;
   }
   .address p {
-    margin: 0.5em 0;
+    margin: 1em 0;
+  }
+  .copyright {
+    padding-top: 1.2em;
   }
 }
