--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,12 @@
 .mainTop {
   display: flex;
   flex-direction: row;
-  background: url('../../assets/images/Top.jpg');
+  background: url('../../assets/images/Top3.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   height: 450px;
   align-items: center;
-  box-shadow: 0px 1px 2px 1px #777;
+  box-shadow: 0px 2px 3px 2px #777;
 }
 
 .topText {
@@ -14,10 +14,10 @@
 }
 
 .topText h1 {
-  color: #f3e8dbad;
+  color: #1b1813;
   font-size: 3.5em;
   margin: 0;
-  text-shadow: 1px 1px black;
+  text-shadow: 1px 1px #c1c1bd;
 }
 
 .topText small {
@@ -26,11 +26,12 @@
   font-size: 1.5em;
   padding-left: 10px;
   margin-top: 10px;
+  text-shadow: 1px 1px black;
 }
 
 @media only screen and (max-width: 670px) {
   .topText {
     text-align: center;
-    padding: 0 2em
+    padding: 0 2em;
   }
 }
