--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -43,6 +43,11 @@ body {
   align-self: flex-end;
 }
 
+.paperText .endIcon {
+  padding-bottom: 1rem;
+  justify-self: baseline;
+}
+
 .MuiGrid-root,
 .MuiGrid-item,
 .MuiGrid-grid-xs-12,
@@ -58,13 +63,14 @@ body {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 768px) {
   .Layout {
     width: 90%;
   }
 
   .paperText blockquote {
     font-size: 1.3rem;
+    padding-top: 1.2rem;
     padding-bottom: 0.5rem;
     margin: 0;
   }
@@ -76,6 +82,6 @@ body {
   }
 
   .paperText .endIcon {
-    display: none;
+    padding-bottom: 1rem;
   }
 }
