--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   background-color: black;
-  height: 230px;
 }
 
 .container {
@@ -17,23 +16,25 @@
 }
 
 .address {
-  padding: 2em;
+  padding: 2em 2em 1em;
   color: white;
 }
 .address h2 {
   margin: 0;
 }
+.address p {
+  line-height: 1.2em;
+  margin-block: 0.5em;
+}
+
 .copyright {
   color: white;
   font-size: 1em;
   text-align: center;
-  padding-bottom: 1em;
+  padding-bottom: 1.5em;
 }
 
 @media only screen and (max-width: 600px) {
-  .Footer {
-    height: 290px;
-  }
   .social {
     padding: 0;
     padding-bottom: 1.2em;
